fix: 🛠️ tsconfig module rule

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,7 +15,7 @@
     "incremental": true,
     "isolatedModules": true,
     "lib": ["ESNext", "DOM"],
-    "module": "ESNext",
+    "module": "NodeNext",
     "moduleResolution": "nodenext",
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
