--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "devDependencies": {
     "@commitlint/cli": "18.4.3",
     "@commitlint/config-conventional": "18.4.3",
+    "@types/node": "20.10.4",
     "@typescript-eslint/eslint-plugin": "6.14.0",
     "@typescript-eslint/parser": "6.14.0",
     "@vitest/coverage-v8": "1.0.4",
@@ -61,5 +62,10 @@
   },
   "type": "module",
   "types": "dist/src/index.d.ts",
-  "version": "0.0.1"
+  "version": "0.0.1",
+  "dependencies": {
+    "discord.js": "^14.14.1",
+    "discordbox": "1.0.4",
+    "dotenv": "16.3.1"
+  }
 }
