--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,7 +33,8 @@
     "strictFunctionTypes": true,
     "strictNullChecks": true,
     "strictPropertyInitialization": true,
-    "target": "ESNext"
+    "target": "ESNext",
+    "typeRoots": ["./node_modules/@types", "./src/types"]
   },
   "exclude": ["**/node_modules/**", "**/*/lib", "**/*/dist"],
   "include": ["src/**/*", "vitest.config.ts"],
