chore(gitignore): 🛠️ only ignore base .env

--- a/.gitignore
+++ b/.gitignore
@@ -7,7 +7,7 @@ coverage
 
 # Config files
 # -----------------------------------
-*.env
+.env
 
 # Miscellanenous
 # -----------------------------------
