--- a/package.json
+++ b/package.json
@@ -64,7 +64,7 @@
   "types": "dist/src/index.d.ts",
   "version": "0.0.1",
   "dependencies": {
-    "discord.js": "^14.14.1",
+    "discord.js": "14.14.1",
     "discordbox": "1.0.4",
     "dotenv": "16.3.1"
   }
