--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,6 @@ updates:
     schedule:
       interval: 'weekly'
     labels:
-      - 'Type: Dependency update 📦'
+      - 'Type: Dependency update :package:'
     reviewers:
       - 'kibotrel'
