chore(deps): 🛠️ move husky from dev-deps to deps

--- a/package.json
+++ b/package.json
@@ -24,7 +24,6 @@
     "eslint-plugin-tsdoc": "0.2.17",
     "eslint-plugin-unicorn": "49.0.0",
     "eslint-plugin-vitest": "0.3.17",
-    "husky": "8.0.3",
     "nodemon": "3.0.2",
     "pm-exec": "1.0.0",
     "prettier": "3.1.1",
@@ -66,6 +65,7 @@
   "dependencies": {
     "discord.js": "14.14.1",
     "discordbox": "1.1.0",
-    "dotenv": "16.3.1"
+    "dotenv": "16.3.1",
+    "husky": "8.0.3"
   }
 }
